adds test build chain to package.json

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "develop": "gatsby develop",
     "dev": "npm run develop",
     "serve": "gatsby serve",
+    "serve:bsp": "npm run build:pp && npm run serve",
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
