--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-material",
-  "description": "GatsbyJS Material Blog theme.",
+  "name": "jeff-blog",
+  "description": "Blog of Jeff Patterson.",
   "version": "1.1.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "author": "Jeff Patterson <jeff@tilikum.net>",
   "dependencies": {
     "babel-plugin-lodash": "^3.3.2",
     "font-awesome": "^4.7.0",
